Fixing duplicate chapter, adding a overflow-x:hidden to hide inexplicable overflow.

--- a/src/components/css/map.css
+++ b/src/components/css/map.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .chinese-contact-tracing {
   background: #222;
 }
